force-app/main/default/objects/BMCServiceDesk__Scheduler_Exceptions__c/BMCServiceDesk__Scheduler_Exceptions__c.object-meta.xml
<CustomObject>
    <description>Stores the exceptions that are generated while running the scheduled normalization job.</description>
    <label>Scheduler Exception</label>
    <nameField>
        <displayFormat>Exception-{00000}</displayFormat>
        <label>Scheduler Exceptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduler Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>