force-app/main/default/objects/BMCServiceDesk__Scheduler_Exceptions__c/fields/BMCServiceDesk__Exception__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Exception__c</fullName>
    <label>Exception</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>