force-app/main/default/objects/BMCServiceDesk__Scheduler_Exceptions__c/fields/BMCServiceDesk__FKNormalization_Rule__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKNormalization_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Normalization Rule</label>
    <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
    <relationshipLabel>Scheduler Exceptions</relationshipLabel>
    <relationshipName>Scheduler_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>