force-app/main/default/objects/BMCServiceDesk__Scheduler_Exceptions__c/fields/BMCServiceDesk__Source__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>