force-app/main/default/objects/BMCServiceDesk__Scheduler_Exceptions__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__Exception__c</columns>
    <columns>BMCServiceDesk__FKNormalization_Rule__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>